@@ -223,6 +223,11 @@ class UFWCommandRule(UFWCommand):
                 except UFWError:
                     err_msg = _("Bad port")
                     raise UFWError(err_msg)
+
+            # Don't specify a port with ipv6 protocol
+            if rule.protocol == "ipv6":
+                err_msg = _("Invalid port with protocol '41' (ipv6)")
+                raise UFWError(err_msg)
         elif (nargs + 1) % 2 != 0:
             err_msg = _("Wrong number of arguments")
             raise UFWError(err_msg)
@@ -403,6 +408,20 @@ class UFWCommandRule(UFWCommand):
             err_msg = _("Improper rule syntax ('%s' specified with app rule)") \
                         % (rule.protocol)
             raise UFWError(err_msg)
+
+        if rule.protocol == "ipv6":
+            if type == "v6":
+                # Can't use protocol '41' (ipv6) with v6 addresses
+                err_msg = _("Invalid IPv6 address with protocol '41' (ipv6)")
+                raise UFWError(err_msg)
+            elif type == "both":
+                debug("Adjusting iptype to 'v4' for protocol '41'")
+                type = "both"
+
+            if rule.dport != "any" or rule.sport != "any":
+                # Don't specify a port with ipv6 protocol
+                err_msg = _("Invalid port with protocol '41' (ipv6)")
+                raise UFWError(err_msg)
 
         r = UFWParserResponse(action)
         r.data['type'] = self.type
